2013-05-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #48500: Remove superfluous class loader cache entries

2013-05-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #46265: Problem with freecap 2.0.0 and postgreSQL (Thanks to Tilo Baller)

2013-04-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #46648: Filenames for *.wav causes potential problems

2013-04-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #47406: Cleanup in ext_autoload.php
	* Fixed bug #47407: Keep domain object font ISO-8859-2-encoded
	* Fixed bug #47408: Incorrect object manager creation

2013-02-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Remove "site tag" feature
	* Updated version to 2.0.0

2013-02-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Add option to configure the encryption algorithm in Extension Manager
	* Disable the audio feature on iOS devices
	* Use object manager to create object instances
	* Follow-up to use object manager to create object instances

2013-02-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Cleanup audio file rendering
	* Fix audio player in IE7, IE9 and Opera
	* Fix audio player in IE8 (but may still be blocked depending on security settings)

2013-02-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Update the manual
	* Namespace the JavaScript functions

2013-02-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fix max attempts message
	* Delete unused directories
	* Fix model html template insert for pi_base plugin

2013-02-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Add translation view helper with formal/informal salutation option
	* Cleanup configuration files
	* Add suggested HTML template insert (for pi_base)
	* Add captcha image and audio icon view helpers
	* Remove alias on SessionStorage class
	* Cleanup translation view helper
	* Require extension vhs 1.5.0
	* Remove requirement for vhs extension
	* Fix validation error translation
	* Cleanup image generator

2012-12-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Add captcha validator class
